<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="15dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDeveloperApps"
        android:padding="15dp"
        android:text="@string/show_developer_apps"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showSecondApp"
        android:padding="15dp"
        android:text="@string/show_second_app"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareToGeneral"
        android:padding="15dp"
        android:text="@string/share_to_general"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareToFacebook"
        android:padding="15dp"
        android:text="@string/share_to_facebook"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareToTwitter"
        android:padding="15dp"
        android:text="@string/share_to_twitter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="contactViaEmail"
        android:padding="15dp"
        android:text="@string/contact_via_email"/>
</LinearLayout>